syntax = "proto3";
package twist_service;

import public "google/protobuf/empty.proto";
import public "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "org.athenian.grpc";

message TwistData {
    double linear_x = 1;
    double linear_y = 2;
    double linear_z = 3;
    double angular_x = 4;
    double angular_y = 5;
    double angular_z = 6;
}

message EncoderData {
    double left = 1;
    double right = 2;
}

service TwistSampleService {
    // DEPRECATED blockingStubRef and writeTwistData()
    // rpc writeTwistData (TwistData) returns (google.protobuf.Empty);
    rpc streamTwistData (stream TwistData) returns (stream google.protobuf.Empty);
}

service StrategyService {
    rpc startStrategyStream (stream TwistData) returns (stream google.protobuf.StringValue);
}

service CommandService {
    rpc startCommandStream (stream google.protobuf.StringValue) returns (stream google.protobuf.StringValue);
}

service EncoderService {
    rpc startEncoderStream (google.protobuf.Empty) returns (stream EncoderData);
}

service HealthCheckService {
    rpc healthCheck (google.protobuf.StringValue) returns (google.protobuf.StringValue);
}